# calculator-test-task

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  README.md
src/: Main.qml  SecretMenuPage.qml  calculator.cpp  calculator.h  main.cpp  secretMenu.cpp  secretMenu.h
